--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Nav from "../components/Nav.astro";
 interface Props {
 	title: string;
 }
@@ -16,8 +17,8 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-black">
-		<slot />
+	<body >
+		<Nav/>
 	</body>
 </html>
 
