--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,9 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro"
 ---
 
-
-
+<Layout title="Kit Componentes">
+    <header>
+        
+    </header>   
+</Layout>
