Aprendiendo de Astro con Astro

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -2,11 +2,12 @@
 // import type { string } from "astro/zod"
 // import type Cards from "../pages/Cards.astro";
 
-const textlinks: { label: string; href: string }[] = [
-  { label: "Cards", href: "/Cards/" },
-  { label: "Navbars", href: "/Navbars/" },
-  { label: "Footers", href: "/Footers/" },
-];
+// const textlinks: { label: string; href: string }[] = [
+//   { label: "Cards", href: "/Cards/" },
+//   { label: "Navbars", href: "/Navbars/" },
+//   { label: "Footers", href: "/Footers/" },
+//   { label: "About", href: "/About/" },
+// ];
 ---
 
 <header>
@@ -24,8 +25,8 @@ const textlinks: { label: string; href: string }[] = [
       </nav>
     </div>
     <div class="w-auto nav__links flex">
-      <img class="h-6 mr-3" src="../../public/assets/murcielago.png" alt="" />
-      <a href="http://">Byron Tito</a>
+      <img  class="h-6 mr-3" src="../../public/assets/murcielago.png" alt="" />
+      <a href="About">Byron Tito</a>
     </div>
   </div>
 </header>
