--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" transition:animate="initial">
+<html lang="en" transition:animate="fade">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -29,5 +29,6 @@ const { title } = Astro.props;
   </head>
   <body>
     <Nav />
+    <slot/>
   </body>
 </html>
