--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -11,7 +11,7 @@
 ---
 
 <header>
-  <div class="flex gap-64 p-2 justify-between bt-1">
+  <div class="flex gap-64 p-2 justify-between bt-1 ">
     <div class="nav__links nav__home">
       <a href="/">Kit Components</a>
     </div>
@@ -46,7 +46,7 @@
   .nav__cards:hover,
   .nav__navbars:hover,
   .nav__footers:hover {
-    background-color: #f2ecff;
+    background-color: #bcbbbd;
     /* border-radius: 10px; */
   }
  
