--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro"
 ---
 
-<Layout title="Kit Componentes">
+<Layout title="Kit Componentes" transition:animate="fade">
     <header>
         
     </header>   
