--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,34 +1,29 @@
 ---
 import Nav from "../components/Nav.astro";
+import Footer from "../components/Footer.astro";
 interface Props {
   title: string;
 }
-import { ViewTransitions } from 'astro:transitions';
-
+import { ViewTransitions } from "astro:transitions";
 
 const { title } = Astro.props;
+import '../styles/global.css';
 ---
 
 <!doctype html>
-<html lang="en" transition:animate="fade">
+<html lang="en" transition:animate="initial">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
-	<link rel="stylesheet" href="/src/styles/style.css">
     <title>{title}</title>
-	<ViewTransitions />
+    <ViewTransitions />
   </head>
-  <body>
+  <body >
     <Nav />
-    <slot/>
+    <slot  />
+    <Footer/>
   </body>
 </html>
