--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,13 +1,13 @@
 ---
-// import type { string } from "astro/zod"
-// import type Cards from "../pages/Cards.astro";
+import type { string } from "astro/zod"
+import type Cards from "../pages/Cards.astro";
 
-// const textlinks: { label: string; href: string }[] = [
-//   { label: "Cards", href: "/Cards/" },
-//   { label: "Navbars", href: "/Navbars/" },
-//   { label: "Footers", href: "/Footers/" },
-//   { label: "About", href: "/About/" },
-// ];
+const textlinks: { label: string; href: string }[] = [
+  { label: "Cards", href: "/Cards/" },
+  { label: "Navbars", href: "/Navbars/" },
+  { label: "Footers", href: "/Footers/" },
+  { label: "About", href: "/About/" },
+];
 ---
 
 <header>
