--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -1,27 +1,33 @@
 ---
 import Layout from "../layouts/Layout.astro";
 const identity = {
-    name: 'Byron',
-    country: 'Ecuador',
-    occupation: 'Student',
-    super: ['super velocidad', 'volar', 'vision de rayos x']
+  name: "Byron",
+  country: "Ecuador",
+  occupation: "Student",
+  super: ["super velocidad", "volar", "vision de rayos x"],
 };
-const skills =['HTML', 'CSS', 'Chevere', 'Astro', 'Tailwind']
-const happy = false
-const finished = true
-const goal = 3
+const skills = ["HTML", "CSS", "Chevere", "Astro", "Tailwind"];
+const happy = false;
+const finished = true;
+const goal = 3;
 const skillColor = "navy";
-
+const allPosts = await Astro.glob('../pages/posts/*.md')
+import BlogPost from "../components/BlogPost.astro";
 ---
+
 <Layout title="Sobre Mi">
   <header>
-    <div class="max-w-screen-xl mx-auto ">
-      <h1 class="titulito text-center text-9xl m-10">Bienvenido </h1>
+    <div class="max-w-screen-xl mx-auto">
+      <h1 class="titulito text-center text-5xl lg:text-9xl m-10">Bienvenido</h1>
       <div>Hola mi nombre es {identity.name}</div>
       <div>Soy de {identity.country} y soy {identity.occupation}</div>
-      <div>Y tengo superpoderes como {identity.super[0]}, {identity.super[1]} y {identity.super[2]}</div>
-      <hr>
-      <div class="m-5">Entre mis habilidades estan </div>
+      <div>
+        Y tengo superpoderes como {identity.super[0]}, {identity.super[1]} y {
+          identity.super[2]
+        }
+      </div>
+      <hr />
+      <div class="m-5">Entre mis habilidades estan</div>
       <ul>
         {skills.map((skill) => <li class="skill">{skill}</li>)}
       </ul>
@@ -30,27 +36,32 @@ const skillColor = "navy";
         el dicho peor es nada
       </p>
       <p>Este sitio esta echo con Astro, es un tecnologia nueva 😎</p>
-    <!-- <ul>
-        <li><a href="/posts/post-1/">Post 1</a></li>
-        <li><a href="/posts/post-2/">Post 2</a></li>
-        <li><a href="/posts/post-3/">Post 3</a></li>
-    </ul> -->
-    {happy && <p>¡Estoy feliz de aprender Astro!</p>}
-    {finished && <p>¡He terminado este tutorial!</p>}
-    {goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
+      <div class="m-10">
+        <ul>
+          <!-- {allPosts.map((post) => <li class="mt-3"><a href={post.url}>{post.frontmatter.title}</a></li>)}        </ul> -->
+          {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
+      </div>
+      {happy && <p>¡Estoy feliz de aprender Astro!</p>}
+      {finished && <p>¡He terminado este tutorial!</p>}
+      {
+        goal === 3 ? (
+          <p>Mi objetivo es terminar en 3 días.</p>
+        ) : (
+          <p>Mi objetivo no son 3 días.</p>
+        )
+      }
     </div>
   </header>
 </Layout>
 
-<style define:vars={{skillColor}}>
-    .titulito {
-    background: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+<style define:vars={{ skillColor }}>
+  .titulito {
+    background: linear-gradient(225deg, #ff3cac 0%, #784ba0 50%, #2b86c5 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-}
-.skill {
+  }
+  .skill {
     color: var(--skillColor);
     font-weight: bold;
   }
-
 </style>
