--- a/src/pages/Navbars.astro
+++ b/src/pages/Navbars.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro"
 ---
 
-<Layout title="Kit Componentes">
+<Layout title="Navbars">
     <header>
         
     </header>   
