Aprendiendo como crear filtrado por tags en markdown

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -8,7 +8,7 @@ const { title, url } = Astro.props;
 
 ---
 
-<div class="blog__card w-96 border rounded-lg bg-slate-100 h-16 m-4 flex justify-center items-center">
+<div class="blog__card w-96 border rounded-lg bg-slate- h-16 m-4 flex justify-center items-center">
   <li class="">
     {url && <a class="" href={url}>{title}</a>}
   </li>
