--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -9,10 +9,11 @@
     </div>
     <div class="nav__container">
       <nav>
-        <ul class="flex gap-10">
+        <ul class="flex gap-5">
           <li class="nav__cards nav__links"><a href="Cards">Cards</a></li>
           <li class="nav__navbars nav__links"><a href="Navbars">Navbars</a></li>
           <li class="nav__footers nav__links"><a href="Footers">Footers</a></li>
+          <li class="nav__tags nav__links"><a href="/tags">Tags</a></li>
         </ul>
       </nav>
     </div>
@@ -32,12 +33,14 @@
   }
   .nav__cards,
   .nav__navbars,
-  .nav__footers {
+  .nav__footers,
+  .nav__tags {
     border-radius: 7px;
     transition: background-color 500ms ease;
   }
   .nav__cards:hover,
   .nav__navbars:hover,
+  .nav__tags:hover,
   .nav__footers:hover {
     background-color: #bcbbbd;
     /* border-radius: 10px; */
