--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,5 @@
 ---
-
+import ThemeIcon from '../components/ThemIcon.astro';
 ---
 
 <header class="navigation">
@@ -18,6 +18,7 @@
       </nav>
     </div>
     <div class="w-auto nav__links flex justify-center">
+      <ThemeIcon></ThemeIcon>
       <img class="h-6 mr-3" src="../../public/assets/murcielago.png" alt="" />
       <a href="About">Byron Tito</a>
     </div>
