--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -13,13 +13,16 @@ const goal = 3;
 const skillColor = "navy";
 const allPosts = await Astro.glob('../pages/posts/*.md')
 import BlogPost from "../components/BlogPost.astro";
+import Greeting from '../components/Greeting'
 ---
 
 <Layout title="Sobre Mi">
   <header>
     <div class="max-w-screen-xl mx-auto">
       <h1 class="titulito text-center text-5xl lg:text-9xl m-10">Bienvenido</h1>
-      <div>Hola mi nombre es {identity.name}</div>
+      <Greeting  messages={["Hola", "Qué tal", "Hola a todos", "Inti"]} />    
+      <Greeting client:load messages={["Hola", "Qué tal", "Hola a todos", "Inti"]} />    
+        <div>Hola mi nombre es {identity.name}</div>
       <div>Soy de {identity.country} y soy {identity.occupation}</div>
       <div>
         Y tengo superpoderes como {identity.super[0]}, {identity.super[1]} y {
