Prueba para resolver el enrutamiento

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -10,9 +10,9 @@ import ThemeIcon from '../components/ThemIcon.astro';
     <div class="nav__container">
       <nav>
         <ul class="flex gap-5">
-          <li class="nav__cards nav__links"><a href="Cards">Cards</a></li>
-          <li class="nav__navbars nav__links"><a href="Navbars">Navbars</a></li>
-          <li class="nav__footers nav__links"><a href="Footers">Footers</a></li>
+          <li class="nav__cards nav__links"><a href="/Cards">Cards</a></li>
+          <li class="nav__navbars nav__links"><a href="/Navbars">Navbars</a></li>
+          <li class="nav__footers nav__links"><a href="/Footers">Footers</a></li>
           <li class="nav__tags nav__links"><a href="/tags">Tags</a></li>
         </ul>
       </nav>
