--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -20,7 +20,7 @@ import ThemeIcon from '../components/ThemIcon.astro';
     <div class="w-auto nav__links flex justify-center">
       <ThemeIcon></ThemeIcon>
       <img class="h-6 mr-3" src="../../public/assets/murcielago.png" alt="" />
-      <a href="About">Byron Tito</a>
+      <a href="/About">Byron Tito</a>
     </div>
   </div>
 </header>
