--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,5 @@
 ---
-import ThemeIcon from '../components/ThemIcon.astro';
+import ThemeIcon from "../components/ThemIcon.astro";
 ---
 
 <header class="navigation">
@@ -11,14 +11,18 @@ import ThemeIcon from '../components/ThemIcon.astro';
       <nav>
         <ul class="flex gap-5">
           <li class="nav__cards nav__links"><a href="/Cards">Cards</a></li>
-          <li class="nav__navbars nav__links"><a href="/Navbars">Navbars</a></li>
-          <li class="nav__footers nav__links"><a href="/Footers">Footers</a></li>
+          <li class="nav__navbars nav__links">
+            <a href="/Navbars">Navbars</a>
+          </li>
+          <li class="nav__footers nav__links">
+            <a href="/Footers">Footers</a>
+          </li>
           <li class="nav__tags nav__links"><a href="/tags">Tags</a></li>
         </ul>
       </nav>
     </div>
     <div class="w-auto nav__links flex justify-center">
-      <ThemeIcon></ThemeIcon>
+      <ThemeIcon />
       <img class="h-6 mr-3" src="../../public/assets/murcielago.png" alt="" />
       <a href="/About">Byron Tito</a>
     </div>
@@ -26,9 +30,6 @@ import ThemeIcon from '../components/ThemIcon.astro';
 </header>
 
 <style>
-  /* .navigation{
-    display: none
-  } */
   .nav__links {
     padding: 5px 20px;
   }
@@ -70,5 +71,3 @@ import ThemeIcon from '../components/ThemIcon.astro';
     padding: 5px 20px;
   }
 </style>
-
-
