--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,11 +1,13 @@
 ---
 import BlogPost from "../../components/BlogPost.astro";
 import Layout from "../../layouts/Layout.astro";
-import type { GetStaticPaths } from 'astro';
+import type { GetStaticPaths } from "astro";
+
+import { getCollection } from "astro:content";
 
 interface Post {
-  url: string;
-  frontmatter: {
+  slug: string;
+  data: {
     title: string;
     tags?: string[];
   };
@@ -16,33 +18,33 @@ interface Props {
 }
 
 export const getStaticPaths: GetStaticPaths = async () => {
-  const allPosts = await Astro.glob("../posts/*.md");
-  const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
-  
+  const allPosts = await getCollection("posts");
+  const uniqueTags = [
+    ...new Set(allPosts.map((post) => post.data.tags).flat()),
+  ];
+
   return uniqueTags.map((tag) => {
-    const filteredPosts = allPosts.filter((post) => post.frontmatter.tags.includes(tag));
+    const filteredPosts = allPosts.filter((post) =>
+      post.data.tags.includes(tag)
+    );
     return {
       params: { tag },
       props: { posts: filteredPosts },
     };
   });
-}
+};
 
 const { tag } = Astro.params;
 const { posts }: Props = Astro.props;
 
-if (typeof tag !== 'string') {
-  throw new Error('Tag must be a string');
+if (typeof tag !== "string") {
+  throw new Error("Tag must be a string");
 }
-
-const filteredPosts = posts.filter((post) =>
-  post.frontmatter?.tags ? post.frontmatter.tags.includes(tag) : false
-);
 ---
 
 <Layout title={tag}>
   <p>Entradas etiquetadas con {tag}</p>
   <ul>
-    {posts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
+    {posts.map((post) => <BlogPost url={post.slug} title={post.data.title} />)}
   </ul>
 </Layout>
