Add abou parte one

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,5 @@
 ---
-import ThemeIcon from "../components/ThemIcon.astro";
+// import ThemeIcon from "../components/ThemIcon.astro";
 ---
 
 <header class="navigation">
@@ -9,7 +9,7 @@ import ThemeIcon from "../components/ThemIcon.astro";
     </div>
     <div class="nav__container">
       <nav>
-        <ul class="flex gap-5">
+        <ul class="flex lg:gap-5 ">
           <li class="nav__cards nav__links"><a href="/Cards">Cards</a></li>
           <li class="nav__navbars nav__links">
             <a href="/Navbars">Navbars</a>
@@ -22,7 +22,7 @@ import ThemeIcon from "../components/ThemIcon.astro";
       </nav>
     </div>
     <div class="w-auto nav__links flex justify-center">
-      <ThemeIcon />
+      <!-- <ThemeIcon /> -->
       <img class="h-6 mr-3" src="../../public/assets/murcielago.png" alt="" />
       <a href="/About">Byron Tito</a>
     </div>
