Add section hobbies

--- a/src/pages/AboutNo.astro
+++ b/src/pages/AboutNo.astro
@@ -19,7 +19,7 @@ import { getCollection } from "astro:content";
 
 <Layout title="Sobre Mi">
   <header>
-    <div class="max-w-screen-xl mx-auto">
+    <div >
       <h1 class="titulito text-center text-5xl lg:text-9xl m-10">Bienvenido</h1>
       <Greeting messages={["Hola", "Qué tal", "Hola a todos", "Inti"]} />
       <Greeting
