--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -1,4 +1,5 @@
 ---
+import Hobbies from "../components/Hobbies.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -9,7 +10,7 @@ import Layout from "../layouts/Layout.astro";
       <h1 class="w-full text-7xl lg:text-9xl text-center">Bienvenido</h1>
     </div>
   </div>
-  <!-- ------------Titulo ABOUT -------------- FIN -->
+<!--! ------------Titulo ABOUT -------------- FIN -->
   <!-- ------------Info  -------------- -->
   <div class="w-full grid lg:grid-cols-2 grid-cols-1">
     <div class="border-2 rounded-3xl w-auto shadow-2xl h-auto lg:m-20 m-5">
@@ -29,7 +30,7 @@ import Layout from "../layouts/Layout.astro";
       <img src="../../public/assets/murcielago-footer.png" alt="" />
     </div>
   </div>
-  <!-- ------------Info  -------------- FIN -->
+  <!--! ------------Info  -------------- FIN -->
   <!-- ------------Mansory  -------------- -->
   <div class="mansory__container grid lg:grid-cols-3fr-5fr lg:mx-10 m-5">
     <h2 class="text-5xl m-10 self-center text-center lg:text-left">Las tecnologías que uso</h2>
@@ -54,7 +55,10 @@ import Layout from "../layouts/Layout.astro";
       </div>
     </div>
   </div>
-  <!-- ------------Mansory  -------------- FIN -->
+  <!--! ------------Mansory  -------------- FIN -->
+  <!-- -------------Hobbies----------------- -->
+   <Hobbies/>
+  <!--! -------------Hobbies-----------------FIN -->
 </Layout>
 
 <style>
