--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,9 +24,9 @@ import Hamburger from "../components/Hamburger.astro";
   <body>
     <Hamburger />
     <Nav />
-    <main class="lg:max-w-screen-xl mx-auto">
+    <main class="lg:max-w-screen-xl mx-auto mt-14">
       <slot />
-    </main>
+    </main >
     <Footer />
     <script>
       import "../scripts/menu.js";
