--- a/src/pages/Cards.astro
+++ b/src/pages/Cards.astro
@@ -3,5 +3,9 @@ import Layout from "../layouts/Layout.astro"
 ---
 
 <Layout title="Cards">
-    
+    <div class="flex justify-center ">
+        <div class="inline-block w-auto px-auto">
+          <h1 class="w-full text-7xl lg:text-6xl text-center">Seccion de cards</h1>
+        </div>
+      </div>
 </Layout>
