--- a/src/pages/Navbars.astro
+++ b/src/pages/Navbars.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../layouts/Layout.astro"
+import Layout from "../layouts/Layout.astro";
+import BlurEfect from "../components/Navbars/blurEfect.astro";
+
 ---
 
 <Layout title="Navbars">
-    <header>
-        
-    </header>   
+  <BlurEfect/>
 </Layout>
