--- a/src/components/Hobbies.astro
+++ b/src/components/Hobbies.astro
@@ -4,10 +4,11 @@ import { getCollection } from "astro:content";
 const allHobbies = await getCollection('hobbies');
 ---
 <div class="container shadow-2xl w-5/6 mx-auto my-20 rounded-2xl overflow-hidden">
-  <div class="palette flex">
+  <div class=" flex lg:flex-row flex-col">
     {
       allHobbies.map((hobby, index) => (
-        <div  class={`color bg-hc${index + 1} flex place-items-center text-white font-bold h-80 flex-1 hover:flex-3 duration-100`}>
+        <div  class={`color bg-hc${index + 1} flex place-items-center text-white font-bold 
+        h-80 flex-1 hover:flex-3 duration-100`}>
           <h3 class="mx-auto text-center">{hobby.data.title} </h3>
           <div class="info__hobbies left-0 top-0 right-0 bottom-0 m-14 z-10 absolute opacity-0">
             <h4 class="text-3xl text-black text-center my-5">{hobby.data.title} </h4>
@@ -28,6 +29,8 @@ const allHobbies = await getCollection('hobbies');
     </svg>
   </div>
 </div>
+
+
 <style>
   .color {
     position: relative;
