Probando imagenes de para cloudfare

--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -27,7 +27,8 @@ import Layout from "../layouts/Layout.astro";
       </div>
     </div>
     <div class="h-96 lg:h-full lg:p-20 m-5">
-      <div class="bg-footer bg-contain bg-no-repeat bg-center h-full "></div>
+      <!-- <div class="bg-footer bg-contain bg-no-repeat bg-center h-full "></div> -->
+       <img class="" src="../../public/assets/murcielago-footer.png" alt="No esta">
     </div>
   </div>
   <!-- ------------Info  -------------- FIN -->
