--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -5,12 +5,12 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="About">
   <!--! ------------Titulo ABOUT -------------- -->
-  <div class="flex justify-center ">
+  <div class="flex justify-center">
     <div class="inline-block w-auto px-auto">
       <h1 class="w-full text-7xl lg:text-9xl text-center">Bienvenido</h1>
     </div>
   </div>
-<!-- ------------Titulo ABOUT -------------- FIN -->
+  <!-- ------------Titulo ABOUT -------------- FIN -->
   <!--! ------------Info  -------------- -->
   <div class="w-full grid lg:grid-cols-2 grid-cols-1">
     <div class="border-2 rounded-3xl w-auto shadow-2xl h-auto lg:m-20 m-5">
@@ -26,39 +26,49 @@ import Layout from "../layouts/Layout.astro";
         </p>
       </div>
     </div>
-    <div class="h-96 lg:h-full lg:p-20 m-5">
-      <!-- <div class="bg-footer bg-contain bg-no-repeat bg-center h-full "></div> -->
-       <img class="" src="../../public/assets/murcielago-footer.png" alt="No esta">
-    </div>
+    <div class="h-96 lg:h-full lg:p-20">
+      <div class="bg-footer bg-contain bg-no-repeat bg-center h-full relative">
+          <div class="overlay"></div>
+      </div>
+  </div>
+  
   </div>
   <!-- ------------Info  -------------- FIN -->
   <!--! ------------Mansory  -------------- -->
   <div class="mansory__container grid lg:grid-cols-3fr-5fr lg:mx-10 m-5">
-    <h2 class="text-5xl m-10 self-center text-center lg:text-left">Las tecnologías que uso</h2>
-    <div class="mansory grid lg:grid-cols-5 gap-2 ">
-      <div class="bg-red-400 lg:col-span-1 py-4  rounded-lg grid place-items-center ">
+    <h2 class="text-5xl m-10 self-center text-center lg:text-left">
+      Las tecnologías que uso
+    </h2>
+    <div class="mansory grid lg:grid-cols-5 gap-2">
+      <div
+        class="bg-red-400 lg:col-span-1 py-4 rounded-lg grid place-items-center">
         <p class="text-6xl">Html</p>
       </div>
-      <div class="bg-green-400 lg:col-span-3 p-4 rounded-lg grid place-items-center">
+      <div
+        class="bg-green-400 lg:col-span-3 p-4 rounded-lg grid place-items-center">
         <p class="text-6xl">Tailwind</p>
       </div>
-      <div class="bg-gray-400 lg:col-start-5 lg:col-end-6 lg:row-start-1 lg:row-end-5  rounded-lg p-4 grid place-items-center">
-        <p class="text-6xl  ">Css</p>
+      <div
+        class="bg-gray-400 lg:col-start-5 lg:col-end-6 lg:row-start-1 lg:row-end-5 rounded-lg p-4 grid place-items-center">
+        <p class="text-6xl">Css</p>
       </div>
-      <div class="bg-blue-400 lg:col-span-4 p-4 rounded-lg grid place-items-center">
+      <div
+        class="bg-blue-400 lg:col-span-4 p-4 rounded-lg grid place-items-center">
         <p class="text-6xl">Javascript</p>
       </div>
-      <div class="bg-yellow-400 lg:row-start-4 lg:col-span-2 p-4 rounded-lg grid place-items-center">
+      <div
+        class="bg-yellow-400 lg:row-start-4 lg:col-span-2 p-4 rounded-lg grid place-items-center">
         <p class="text-6xl">React</p>
       </div>
-      <div class="bg-orange-400 lg:row-start-4 lg:col-span-2 p-4 rounded-lg grid place-items-center">
+      <div
+        class="bg-orange-400 lg:row-start-4 lg:col-span-2 p-4 rounded-lg grid place-items-center">
         <p class="text-6xl">Astro</p>
       </div>
     </div>
   </div>
   <!-- ------------Mansory  -------------- FIN -->
   <!--! -------------Hobbies----------------- -->
-   <Hobbies/>
+  <Hobbies />
   <!--! -------------Hobbies-----------------FIN -->
 </Layout>
 
@@ -134,14 +144,14 @@ import Layout from "../layouts/Layout.astro";
     }
   }
   .vertical-text {
-      writing-mode: vertical-rl;
-      text-orientation: mixed;
-    }
-    .footer__img{
-      background-image: url(../assets/img/murcielago-footer.png);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      /* background-image: url(../assets/img/fondo.jpeg); */
-    }
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+  }
+  .footer__img {
+    background-image: url(../assets/img/murcielago-footer.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* background-image: url(../assets/img/fondo.jpeg); */
+  }
 </style>
