--- a/src/pages/Cards.astro
+++ b/src/pages/Cards.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Mixblend from "../components/Cards/mixblend.astro";
+import SimpleCard from "../components/Cards/simpleCard.astro";
+
 ---
 
 <Layout title="Cards">
@@ -12,6 +14,6 @@ import Mixblend from "../components/Cards/mixblend.astro";
   <div class="flex">
 
     <Mixblend/>
-    
+    <SimpleCard/>
   </div>
 </Layout>
