Add footer inicio

--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -1,5 +1,5 @@
 ---
-import Hobbies from "../components/Hobbies.astro";
+import Hobbies from "../components/About/Hobbies.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
