--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
-import Layout from "../layouts/Layout.astro"
+import Layout from "../layouts/Layout.astro";
+import Hero from "../components/Hero.astro";
+import CardsInsCards from "../components/CardsInCards.astro";
 ---
 
-<Layout title="Kit Componentes" transition:animate="fade">
-    <header>
-        
-    </header>   
+<Layout title="Kit Components" transition:animate="fade">
+  <Hero />
+  <CardsInsCards />
 </Layout>
