--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 html {
-  font-family: "Gwendolyn", cursive;
+  /* font-family: "Gwendolyn", cursive; */
   font-weight: 400;
   font-style: normal;
 }
@@ -9,7 +8,8 @@ html {
   box-sizing: border-box;
 }
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
+
 }
 
 .hamburger {
